--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    scroll-behavior: smooth;
+  }
 body{
 @apply bg-navy text-slate text-xl relative;
 font-family: "Calibre",sans-serif;
